create news and resume tabs

--- a/index.html
+++ b/index.html
@@ -93,11 +93,13 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#resume">RESUME</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
 
                 </ul>
@@ -124,7 +126,7 @@
     <!-- Photo -->
     
     <!-- Home -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="home">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md" id="home">
         <div class="container px-5">
             <header>
                 <h2 id="home-subtitle"> </h2>
@@ -134,6 +136,30 @@
         </div>
     </section>
     <!-- Home -->
+
+    <!-- News -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="news">
+        <div class="container px-5">
+            <header>
+                <h2 id="news-subtitle"><i class="bi bi-newspaper"></i>NEWS </h2>
+            </header>
+            <div class="main-body" id="news-md"></div>
+
+        </div>
+    </section>
+    <!-- News -->
+
+    <!-- Resume -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="resume">
+        <div class="container px-5">
+            <header>
+                <h2 id="resume-subtitle"><i class="bi bi-briefcase-fill"></i>&nbsp;RESUME</h2>
+            </header>
+            <div class="main-body" id="resume-md"></div>
+
+        </div>
+    </section>
+    <!-- Resume  -->
 
     <!-- Publications -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
@@ -146,18 +172,6 @@
         </div>
     </section>
     <!-- Publications  -->
-
-    <!-- Awards -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
-        <div class="container px-5">
-            <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
-            </header>
-            <div class="main-body" id="awards-md"></div>
-
-        </div>
-    </section>
-    <!-- Awards -->
 
 
     <!-- Footer-->
