--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#material">MATERIAL</a>
+                        <a class="nav-link me-lg-3" href="#materials">MATERIALS</a>
                     </li>
 
                 </ul>
@@ -193,17 +193,17 @@
     </section>
     <!-- Repositories  -->
 
-    <!-- Material -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="material">
+    <!-- Materials -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="materials">
         <div class="container px-5">
             <header>
-                <h2 id="material-subtitle"><i class="bi bi-github"></i>&nbsp;REPOSITORIES</h2>
+                <h2 id="materials-subtitle"><i class="bi bi-book"></i>&nbsp;MATERIALS</h2>
             </header>
-            <div class="main-body" id="material-md"></div>
+            <div class="main-body" id="materials-md"></div>
 
         </div>
     </section>
-    <!-- Material  -->
+    <!-- Materials  -->
 
 
     <!-- Footer-->
