--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#patents">PATENTS</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#repositories">REPOSITORIES</a>
                     </li>
 
@@ -180,6 +184,18 @@
         </div>
     </section>
     <!-- Publications  -->
+
+    <!-- Patents -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="patents">
+        <div class="container px-5">
+            <header>
+                <h2 id="patents-subtitle"><i class="bi bi-shield-check"></i>&nbsp;PATENTS</h2>
+            </header>
+            <div class="main-body" id="patents-md"></div>
+
+        </div>
+    </section>
+    <!-- Patents  -->
 
     <!-- Repositories -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="repositories">
